k8s/apps/backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    app: eks-corp-backend
